--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,8 @@ plugins {
     id 'com.android.library' version '7.1.3' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.20' apply false
 }
+ext.koin_version = "3.0.2"
+ext.nav_version = "2.3.5"
 
 task clean(type: Delete) {
     delete rootProject.buildDir
